--- a/LaberintoV1/nbproject/project.properties
+++ b/LaberintoV1/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AnimatonClass.jar=C:\\Java-AnimateClass\\AnimatonClass.jar
+file.reference.AnimatonClass.jar-1=C:\\Users\\Angel\\Documents\\Java Swing Helpers\\AnimatonClass.jar
 file.reference.Grafos.jar=C:\\Users\\Angel\\Documents\\NetBeansProjects\\Dijkastra\\lib\\Grafos.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.AnimatonClass.jar}:\
-    ${file.reference.Grafos.jar}
+    ${file.reference.Grafos.jar}:\
+    ${file.reference.AnimatonClass.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
