--- a/LaberintoV1/nbproject/private/private.properties
+++ b/LaberintoV1/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.AnimatonClass.jar=C:\\Users\\Angel\\Documents\\Java Swing Helpers\\AnimatonClass.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Angel\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
